fix：修改IndexGenerateRunner